--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -747,7 +747,7 @@
 	"dataMapping.schemaView.emptyData": "No fields - node executed, but no items were sent on this branch",
 	"dataMapping.schemaView.emptySchema": "No fields - item(s) exist, but they're empty",
 	"dataMapping.schemaView.emptySchemaWithBinary": "Only binary data exists. View it using the 'Binary' tab",
-	"dataMapping.schemaView.executeSchema": "{link} to see schema",
+	"dataMapping.schemaView.executeSchema": "{link} to view input data",
 	"dataMapping.schemaView.disabled": "This node is disabled and will just pass data through",
 	"dataMapping.schemaView.noMatches": "No results for '{search}'",
 	"dataMapping.schemaView.preview": "Usually outputs the following fields. {execute} to see the actual ones. {link}",
