--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1921,7 +1921,7 @@
 	"resourceMapper.staleDataWarning.notice": "Refresh to see the updated fields",
 	"resourceMapper.attemptToConvertTypes.displayName": "Attempt To Convert Types",
 	"resourceMapper.attemptToConvertTypes.description": "Attempt to convert types when mapping fields",
-	"runData.pinData.insertedExecutionData": "💡 Inserted data from last execution. You can edit as needed.",
+	"runData.pinData.insertedExecutionData": "💡 Inserted data from last successful execution. You can edit as needed.",
 	"runData.openSubExecutionSingle": "View sub-execution",
 	"runData.openSubExecutionWithId": "View sub-execution {id}",
 	"runData.openParentExecution": "View parent execution {id}",
