add agent selection and creation

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -290,6 +290,21 @@
 	"chat.window.session.id.copy": "(click to copy)",
 	"chat.window.session.reset": "Reset",
 	"chat.window.session.resetSession": "Reset chat session",
+	"chatHub.agent.myAgents": "My Agents",
+	"chatHub.agent.newAgent": "New Agent",
+	"chatHub.agent.editor.title.new": "New Agent",
+	"chatHub.agent.editor.title.edit": "Edit Agent",
+	"chatHub.agent.editor.name.label": "Name",
+	"chatHub.agent.editor.name.placeholder": "Enter agent name",
+	"chatHub.agent.editor.description.label": "Description",
+	"chatHub.agent.editor.description.placeholder": "Enter agent description (optional)",
+	"chatHub.agent.editor.systemPrompt.label": "System Prompt",
+	"chatHub.agent.editor.systemPrompt.placeholder": "Enter system prompt",
+	"chatHub.agent.editor.model.label": "Model",
+	"chatHub.agent.editor.loading": "Loading agent...",
+	"chatHub.agent.editor.saving": "Saving...",
+	"chatHub.agent.editor.save": "Save",
+	"chatHub.agent.editor.cancel": "Cancel",
 	"chatEmbed.infoTip.description": "Add chat to external applications using the n8n chat package.",
 	"chatEmbed.infoTip.link": "More info",
 	"chatEmbed.title": "Embed Chat in your website",
