--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -305,6 +305,7 @@
 	"chatHub.agent.editor.saving": "Saving...",
 	"chatHub.agent.editor.save": "Save",
 	"chatHub.agent.editor.cancel": "Cancel",
+	"chatHub.agent.editor.error.load": "Failed to load agent",
 	"chatEmbed.infoTip.description": "Add chat to external applications using the n8n chat package.",
 	"chatEmbed.infoTip.link": "More info",
 	"chatEmbed.title": "Embed Chat in your website",
