improve error handling when saving

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -306,6 +306,9 @@
 	"chatHub.agent.editor.save": "Save",
 	"chatHub.agent.editor.cancel": "Cancel",
 	"chatHub.agent.editor.error.load": "Failed to load agent",
+	"chatHub.agent.editor.error.save": "Failed to save agent",
+	"chatHub.agent.editor.success.create": "Agent created successfully",
+	"chatHub.agent.editor.success.update": "Agent updated successfully",
 	"chatEmbed.infoTip.description": "Add chat to external applications using the n8n chat package.",
 	"chatEmbed.infoTip.link": "More info",
 	"chatEmbed.title": "Embed Chat in your website",
