--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -305,10 +305,18 @@
 	"chatHub.agent.editor.saving": "Saving...",
 	"chatHub.agent.editor.save": "Save",
 	"chatHub.agent.editor.cancel": "Cancel",
+	"chatHub.agent.editor.delete": "Delete",
+	"chatHub.agent.editor.deleting": "Deleting...",
+	"chatHub.agent.editor.delete.confirm.title": "Delete Agent",
+	"chatHub.agent.editor.delete.confirm.message": "Are you sure you want to delete this agent? This action cannot be undone.",
+	"chatHub.agent.editor.delete.confirm.button": "Delete",
+	"chatHub.agent.editor.delete.cancel.button": "Cancel",
 	"chatHub.agent.editor.error.load": "Failed to load agent",
 	"chatHub.agent.editor.error.save": "Failed to save agent",
+	"chatHub.agent.editor.error.delete": "Failed to delete agent",
 	"chatHub.agent.editor.success.create": "Agent created successfully",
 	"chatHub.agent.editor.success.update": "Agent updated successfully",
+	"chatHub.agent.editor.success.delete": "Agent deleted successfully",
 	"chatEmbed.infoTip.description": "Add chat to external applications using the n8n chat package.",
 	"chatEmbed.infoTip.link": "More info",
 	"chatEmbed.title": "Embed Chat in your website",
