--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2375,10 +2375,10 @@
 	"settings.usageAndPlan.license.activation.error.title": "Activation failed",
 	"settings.usageAndPlan.license.activation.success.title": "License activated",
 	"settings.usageAndPlan.license.activation.success.message": "Your {name} {type} has been successfully activated.",
-	"settings.usageAndPlan.dialog.eula.title": "Accept License Agreement",
-	"settings.usageAndPlan.dialog.eula.description": "This enterprise license requires acceptance of the End User License Agreement before activation.",
-	"settings.usageAndPlan.dialog.eula.checkbox.label": "I accept the ",
-	"settings.usageAndPlan.dialog.eula.link.text": "terms and conditions",
+	"settings.usageAndPlan.dialog.eula.title": "Confirm terms acceptance",
+	"settings.usageAndPlan.dialog.eula.description": "To activate your license, please review and accept our EULA terms. Once you've read the terms, check the box below to confirm your agreement and proceed.",
+	"settings.usageAndPlan.dialog.eula.checkbox.label": "Accept ",
+	"settings.usageAndPlan.dialog.eula.link.text": "EULA terms",
 	"settings.usageAndPlan.dialog.eula.button.accept": "Accept & activate",
 	"settings.usageAndPlan.dialog.eula.button.cancel": "@:_reusableBaseText.cancel",
 	"settings.usageAndPlan.license.communityRegistered.tooltip": "You have registered your email to unlock additional features on your community plan",
