Add support for fixedCollection with multiple options

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -994,6 +994,7 @@
 	"expressionModalInput.pairedItemError.noRunData": "Can't determine which item to use - execute node for more info",
 	"fixedCollectionParameter.addItem": "Add item",
 	"fixedCollectionParameter.addParameter": "Add {parameter}",
+	"fixedCollectionParameter.allOptionsAdded": "All options have been added",
 	"fixedCollectionParameter.choose": "Choose...",
 	"fixedCollectionParameter.currentlyNoItemsExist": "Currently no items exist",
 	"fixedCollectionParameter.deleteItem": "Delete item",
