Update UI to use endpoints

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -40,6 +40,7 @@
 	"generic.annotations": "Annotations",
 	"generic.annotationData": "Highlighted data",
 	"generic.any": "Any",
+	"generic.back": "Back",
 	"generic.cancel": "Cancel",
 	"generic.open": "Open",
 	"generic.add": "Add",
@@ -3100,9 +3101,21 @@
 	"dataTable.card.column.count": "{count} column | {count} columns",
 	"dataTable.add.title": "Create new Data table",
 	"dataTable.add.button.label": "Create Data table",
+	"dataTable.add.fromScratch": "From Scratch",
+	"dataTable.add.importCsv": "Import CSV",
 	"dataTable.add.input.name.label": "Data table name",
 	"dataTable.add.input.name.placeholder": "Enter data table name",
 	"dataTable.add.error": "Error creating data table",
+	"dataTable.upload.uploading": "Uploading and processing CSV file...",
+	"dataTable.upload.success": "'{fileName}' has been uploaded successfully. We found {columnCount} column and {rowCount} row | '{fileName}' has been uploaded successfully. We found {columnCount} columns and {rowCount} rows",
+	"dataTable.upload.error": "Error uploading CSV file",
+	"dataTable.import.columnsFound": "Columns found",
+	"dataTable.import.columnsDescription": "Review and adjust the column names and types detected from your CSV file",
+	"dataTable.import.columnName": "Column Name",
+	"dataTable.import.columnType": "Data Type",
+	"dataTable.import.columnNamePlaceholder": "Enter column name",
+	"dataTable.import.duplicateColumnName": "Column name must be unique",
+	"dataTable.import.systemColumnName": "'{columnName}' is a reserved system column name",
 	"dataTable.delete.confirm.title": "Delete Data table",
 	"dataTable.delete.confirm.message": "Are you sure you want to delete the data table '{name}'? This action cannot be undone.",
 	"dataTable.delete.error": "Error deleting data table",
