--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -71,6 +71,7 @@
 	"generic.tag_plural": "Tags",
 	"generic.tag": "Tag | {count} Tags",
 	"generic.tests": "Evaluations",
+	"generic.templates": "Templates",
 	"generic.optional": "optional",
 	"generic.or": "or",
 	"generic.clickToCopy": "Click to copy",
@@ -1152,7 +1153,6 @@
 	"mainSidebar.showMessage.handleArchive.title": "Workflow '{workflowName}' archived",
 	"mainSidebar.showMessage.handleUnarchive.title": "Workflow '{workflowName}' unarchived",
 	"mainSidebar.showMessage.stopExecution.title": "Execution stopped",
-	"mainSidebar.templates": "Templates",
 	"mainSidebar.workflows": "Workflows",
 	"mainSidebar.workflows.readOnlyEnv.tooltip": "Protected instances prevent editing workflows (recommended for production environments). {link}",
 	"mainSidebar.workflows.readOnlyEnv.tooltip.link": "More info",
@@ -2917,6 +2917,8 @@
 	"workflows.templateRecoV2.loadingTemplates": "Loading templates...",
 	"workflows.templateRecoV2.useTemplate": "Use template",
 	"workflows.templateRecoV2.exploreTemplates": "Or explore templates to get inspired and learn fast:",
+	"workflows.dataGathering.loadingTemplates": "Loading templates...",
+	"workflows.dataGathering.seeMoreTemplates": "See more templates",
 	"workflows.search.placeholder": "Search",
 	"workflows.filters": "Filters",
 	"workflows.filters.tags": "Tags",
@@ -3752,7 +3754,6 @@
 	"commandBar.sections.evaluation": "Evaluation",
 	"commandBar.sections.demo": "Demo",
 	"commandBar.sections.general": "Navigation",
-	"commandBar.sections.templates": "Templates",
 	"commandBar.templates.import": "Import template",
 	"commandBar.templates.importWithPrefix": "Import template {templateName}",
 	"commandBar.nodes.addNode": "Add node",
