add projectVariables and dataTables

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1915,6 +1915,28 @@
 	"projectRoles.credential:delete": "Delete",
 	"projectRoles.credential:delete.tooltip": "Delete credentials",
 
+	"projectRoles.dataTable:read": "View",
+	"projectRoles.dataTable:read.tooltip": "View the structure of data table (columns, name) and to view metadata",
+	"projectRoles.dataTable:update": "Edit",
+	"projectRoles.dataTable:update.tooltip": "Modify schema/columns",
+	"projectRoles.dataTable:create": "Create",
+	"projectRoles.dataTable:create.tooltip": "Create new data tables",
+	"projectRoles.dataTable:delete": "Delete",
+	"projectRoles.dataTable:delete.tooltip": "Delete data tables",
+	"projectRoles.dataTable:readRow": "View Rows",
+	"projectRoles.dataTable:readRow.tooltip": "View data table rows",
+	"projectRoles.dataTable:writeRow": "Edit Rows",
+	"projectRoles.dataTable:writeRow.tooltip": "Modify data table rows",
+
+	"projectRoles.projectVariable:read": "View",
+	"projectRoles.projectVariable:read.tooltip": "View project variable values and use them in workflows",
+	"projectRoles.projectVariable:update": "Edit",
+	"projectRoles.projectVariable:update.tooltip": "Modify existing project variables",
+	"projectRoles.projectVariable:create": "Create",
+	"projectRoles.projectVariable:create.tooltip": "Create new project variables",
+	"projectRoles.projectVariable:delete": "Delete",
+	"projectRoles.projectVariable:delete.tooltip": "Delete project variables",
+
 	"projectRoles.sourceControl:pull": "Pull",
 	"projectRoles.sourceControl:push": "Push",
 	"projectRoles.sourceControl:push.tooltip": "Push changes (workflows, credentials, tags) to the remote repository",
