--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3157,7 +3157,7 @@
 	"dataTable.addColumn.systemColumnDescription": "This is a system column, choose a different name",
 	"dataTable.addColumn.testingColumnDescription": "This column is used for testing, choose a different name",
 	"settings.ai": "AI Usage",
-	"settings.ai.description.both": "Manage how n8n uses your data to improve our AI features. These settings only apply to <b>AI Assistant Chat</b> and <b>Ask AI in the Code node</b> features.",
+	"settings.ai.description.both": "Manage how n8n uses your data to improve our AI features.",
 	"settings.ai.description.assistantOnly": "Manage how n8n uses your data to improve our AI features. These settings only apply to <b>AI Assistant Chat</b> feature.",
 	"settings.ai.description.askAiOnly": "Manage how n8n uses your data to improve our AI features. These settings only apply to <b>Ask AI in the Code node</b> feature.",
 	"settings.ai.button.tooltip": "AI usage settings",
@@ -3165,8 +3165,7 @@
 	"settings.ai.allowSendingSchema.description": "Allow n8n to send your node parameter schemas (names and types) to our AI service to provide better AI responses.",
 	"settings.ai.allowSendingActualData.label": "Send actual data values to AI",
 	"settings.ai.allowSendingActualData.description": "Allow n8n to send actual data values (parameter values and resolved expression values) to our AI service to provide more accurate and context-aware AI responses.",
-	"settings.ai.efficiencyNotice.builderEnabled": "Not sending data values will disable the AI Workflow Builder and result in less helpful AI responses from other AI features.",
-	"settings.ai.efficiencyNotice.builderDisabled": "Not sending data values will result in less helpful AI responses.",
+	"settings.ai.efficiencyNotice": "Not sending data values will result in less helpful AI responses and will disable the AI Builder feature.",
 	"settings.ai.updated.success": "AI settings updated",
 	"settings.ai.updated.error": "There was a problem updating AI settings",
 	"settings.ai.confirm.title": "Stop sending data to AI?",
