--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2375,7 +2375,7 @@
 	"settings.usageAndPlan.license.activation.error.title": "Activation failed",
 	"settings.usageAndPlan.license.activation.success.title": "License activated",
 	"settings.usageAndPlan.license.activation.success.message": "Your {name} {type} has been successfully activated.",
-	"settings.usageAndPlan.dialog.eula.title": "Confirm terms acceptance",
+	"settings.usageAndPlan.dialog.eula.title": "Confirmation needed",
 	"settings.usageAndPlan.dialog.eula.description": "To activate your license, please review and accept our EULA terms. Once you've read the terms, check the box below to confirm your agreement and proceed.",
 	"settings.usageAndPlan.dialog.eula.checkbox.label": "Accept",
 	"settings.usageAndPlan.dialog.eula.link.text": "EULA terms",
