--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -40,6 +40,8 @@
 	"generic.annotations": "Annotations",
 	"generic.annotationData": "Highlighted data",
 	"generic.any": "Any",
+	"generic.allow": "Allow",
+	"generic.deny": "Deny",
 	"generic.cancel": "Cancel",
 	"generic.open": "Open",
 	"generic.add": "Add",
@@ -1156,6 +1158,12 @@
 	"mainSidebar.workersView": "Workers",
 	"mainSidebar.whatsNew": "What’s New",
 	"mainSidebar.whatsNew.fullChangelog": "Full changelog",
+	"mcp.consentView.heading": "{clientName} wants access to your n8n instance",
+	"mcp.consentView.description": "This will allow {clientName} to perform the following actions:",
+	"mcp.consentView.action.listWorkflows": "Get a list of your workflows",
+	"mcp.consentView.action.workflowDetails": "Get details for a specific workflow",
+	"mcp.consentView.action.executeWorkflow": "Execute a workflow",
+	"mcp.consentView.readMore": "Read more <a href='{docsUrl}' target='_blank'>here</a>",
 	"mcp.workflowNotEligable.description": "Only active, webhook-triggered workflows can be accessible through MCP",
 	"mcp.workflowDeactivated.title": "MCP Access Disabled",
 	"mcp.productionCheklist.title": "Enable MCP access",
