--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -1158,16 +1158,6 @@
 	"mainSidebar.workersView": "Workers",
 	"mainSidebar.whatsNew": "What’s New",
 	"mainSidebar.whatsNew.fullChangelog": "Full changelog",
-	"mcp.consentView.title": "oAuth access consent",
-	"mcp.consentView.heading": "{clientName} wants access to your n8n instance",
-	"mcp.consentView.description": "This will allow {clientName} to perform the following actions:",
-	"mcp.consentView.action.listWorkflows": "Get a list of your workflows",
-	"mcp.consentView.action.workflowDetails": "Get details for a specific workflow",
-	"mcp.consentView.action.executeWorkflow": "Execute a workflow",
-	"mcp.consentView.readMore": "Read more <a href='{docsUrl}' target='_blank'>here</a>",
-	"mcp.consentView.error.deny": "Error denying access",
-	"mcp.consentView.error.allow": "Error allow access",
-	"mcp.consentView.error.fetchDetails": "Error fetching client details",
 	"mcp.workflowNotEligable.description": "Only active, webhook-triggered workflows can be accessible through MCP",
 	"mcp.workflowDeactivated.title": "MCP Access Disabled",
 	"mcp.productionCheklist.title": "Enable MCP access",
@@ -1722,6 +1712,16 @@
 	"nodeWebhooks.webhookUrls.mcpTrigger": "MCP URL",
 	"openWorkflow.workflowImportError": "Could not import workflow",
 	"openWorkflow.workflowNotFoundError": "Could not find workflow",
+	"oauth.consentView.title": "oAuth access consent",
+	"oauth.consentView.heading": "{clientName} wants access to your n8n instance",
+	"oauth.consentView.description": "This will allow {clientName} to perform the following actions:",
+	"oauth.consentView.action.listWorkflows": "Get a list of your workflows",
+	"oauth.consentView.action.workflowDetails": "Get details for a specific workflow",
+	"oauth.consentView.action.executeWorkflow": "Execute a workflow",
+	"oauth.consentView.readMore": "Read more <a href='{docsUrl}' target='_blank'>here</a>",
+	"oauth.consentView.error.deny": "Error denying access",
+	"oauth.consentView.error.allow": "Error allow access",
+	"oauth.consentView.error.fetchDetails": "Error fetching client details",
 	"parameterInput.expressionResult": "e.g. {result}",
 	"parameterInput.tip": "Tip",
 	"parameterInput.dragTipBeforePill": "Drag an",
