Change default license limit, clean up

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2906,7 +2906,7 @@
 	"workflowHistory.item.latest": "Latest saved",
 	"workflowHistory.empty": "No versions yet.",
 	"workflowHistory.hint": "Save the workflow to create the first version!",
-	"workflowHistory.limit": "Version history is limited to {evaluatedPruneTime} days",
+	"workflowHistory.limit": "Version history is limited to {days} days",
 	"workflowHistory.upgrade": "{link} to activate full history",
 	"workflowHistory.upgrade.link": "Upgrade plan",
 	"workflowHistory.action.error.title": "Failed to {action}",
@@ -2920,9 +2920,7 @@
 	"workflowHistory.action.clone.success.title": "Successfully cloned workflow version",
 	"workflowHistory.action.clone.success.message": "Open cloned workflow in a new tab",
 	"workflowHistory.button.tooltip.empty": "This workflow currently has no history to view. Once you've made your first save, you'll be able to view previous versions",
-	"workflowHistory.button.tooltip.enabled": "Workflow history to view and restore previous versions of your workflows",
-	"workflowHistory.button.tooltip.disabled": "Upgrade to unlock workflow history to view and restore previous versions of your workflows. {link}",
-	"workflowHistory.button.tooltip.disabled.link": "View plans",
+	"workflowHistory.button.tooltip": "Workflow history to view and restore previous versions of your workflows",
 	"workflows.heading": "Workflows",
 	"workflows.add": "Add workflow",
 	"workflows.project.add": "Add workflow to project",
