Remove workflow history from community plus enrollment modal

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3561,14 +3561,12 @@
 	"communityPlusModal.success.title": "Request sent",
 	"communityPlusModal.success.message": "License key will be sent to {email}",
 	"communityPlusModal.description": "Receive a free activation key for the advanced features below - lifetime access.",
-	"communityPlusModal.features.first.title": "Workflow history",
-	"communityPlusModal.features.first.description": "Review and restore any workflow version from the last 24 hours",
-	"communityPlusModal.features.second.title": "Advanced debugging",
-	"communityPlusModal.features.second.description": "Easily fix any workflow execution that’s errored, then re-run it",
-	"communityPlusModal.features.third.title": "Execution search and tagging",
-	"communityPlusModal.features.third.description": "Search and organize past workflow executions for easier review",
-	"communityPlusModal.features.fourth.title": "Folders",
-	"communityPlusModal.features.fourth.description": "Organize your workflows in a nested folder structure",
+	"communityPlusModal.features.debugging.title": "Advanced debugging",
+	"communityPlusModal.features.debugging.description": "Easily fix any workflow execution that’s errored, then re-run it",
+	"communityPlusModal.features.execution.title": "Execution search and tagging",
+	"communityPlusModal.features.execution.description": "Search and organize past workflow executions for easier review",
+	"communityPlusModal.features.folders.title": "Folders",
+	"communityPlusModal.features.folders.description": "Organize your workflows in a nested folder structure",
 	"communityPlusModal.input.email.label": "Enter email to receive your license key",
 	"communityPlusModal.button.skip": "Skip",
 	"communityPlusModal.button.confirm": "Send me a free license key",
