--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -3112,6 +3112,10 @@
 	"dataTable.add.error": "Error creating data table",
 	"dataTable.upload.uploading": "Uploading and processing CSV file...",
 	"dataTable.upload.selectFile": "Waiting for file selection...",
+	"dataTable.upload.dropOrClick": "Drop file here or click to upload",
+	"dataTable.upload.csvOnly": "CSV files only",
+	"dataTable.upload.hasHeaders": "My CSV file contains a header row",
+	"dataTable.upload.uploadButton": "Upload CSV",
 	"dataTable.upload.success": "'{fileName}' has been uploaded successfully. We found {columnCount} column and {rowCount} row | '{fileName}' has been uploaded successfully. We found {columnCount} columns and {rowCount} rows",
 	"dataTable.upload.error": "Error uploading CSV file",
 	"dataTable.import.columnsFound": "Columns found",
