--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -40,6 +40,8 @@
 	"generic.annotations": "Annotations",
 	"generic.annotationData": "Highlighted data",
 	"generic.any": "Any",
+	"generic.allow": "Allow",
+	"generic.deny": "Deny",
 	"generic.cancel": "Cancel",
 	"generic.open": "Open",
 	"generic.add": "Add",
@@ -1710,6 +1712,16 @@
 	"nodeWebhooks.webhookUrls.mcpTrigger": "MCP URL",
 	"openWorkflow.workflowImportError": "Could not import workflow",
 	"openWorkflow.workflowNotFoundError": "Could not find workflow",
+	"oauth.consentView.title": "oAuth access consent",
+	"oauth.consentView.heading": "{clientName} wants access to your n8n instance",
+	"oauth.consentView.description": "This will allow {clientName} to perform the following actions:",
+	"oauth.consentView.action.listWorkflows": "Get a list of your workflows",
+	"oauth.consentView.action.workflowDetails": "Get details for a specific workflow",
+	"oauth.consentView.action.executeWorkflow": "Execute a workflow",
+	"oauth.consentView.readMore": "Read more <a href='{docsUrl}' target='_blank'>here</a>",
+	"oauth.consentView.error.deny": "Error denying access",
+	"oauth.consentView.error.allow": "Error allowing access”",
+	"oauth.consentView.error.fetchDetails": "Error fetching client details",
 	"parameterInput.expressionResult": "e.g. {result}",
 	"parameterInput.tip": "Tip",
 	"parameterInput.dragTipBeforePill": "Drag an",
