--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -47,7 +47,7 @@
 	"generic.clear": "Clear",
 	"generic.confirm": "Confirm",
 	"generic.create": "Create",
-	"generic.create.workflow": "Create Workflow",
+	"generic.create.workflow": "Create workflow",
 	"generic.deleteWorkflowError": "Problem deleting workflow",
 	"generic.archiveWorkflowError": "Problem archiving workflow",
 	"generic.unarchiveWorkflowError": "Problem unarchiving workflow",
@@ -3136,7 +3136,7 @@
 	"dataTable.card.size": "{size}MB",
 	"dataTable.card.column.count": "{count} column | {count} columns",
 	"dataTable.add.title": "Create new Data table",
-	"dataTable.add.button.label": "Create Data table",
+	"dataTable.add.button.label": "Create data table",
 	"dataTable.add.input.name.label": "Data table name",
 	"dataTable.add.input.name.placeholder": "Enter data table name",
 	"dataTable.add.error": "Error creating data table",
@@ -3319,9 +3319,9 @@
 	"projects.header.personal.subtitle": "Workflows and credentials owned by you",
 	"projects.header.personal.subtitleWithDataTables": "Workflows, credentials and data tables owned by you",
 	"projects.header.shared.subtitle": "Workflows and credentials other users have shared with you",
-	"projects.header.create.workflow": "Create Workflow",
-	"projects.header.create.credential": "Create Credential",
-	"projects.header.create.folder": "Create Folder",
+	"projects.header.create.workflow": "Create workflow",
+	"projects.header.create.credential": "Create credential",
+	"projects.header.create.folder": "Create folder",
 	"projects.create": "Create",
 	"projects.create.personal": "Create in personal",
 	"projects.create.team": "Create in project",
