Rename data gathering experiment to data quality

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2950,8 +2950,8 @@
 	"workflows.templateRecoV2.loadingTemplates": "Loading templates...",
 	"workflows.templateRecoV2.useTemplate": "Use template",
 	"workflows.templateRecoV2.exploreTemplates": "Or explore templates to get inspired and learn fast:",
-	"workflows.dataGathering.loadingTemplates": "Loading templates...",
-	"workflows.dataGathering.seeMoreTemplates": "See more templates",
+	"workflows.templatesDataQuality.loadingTemplates": "Loading templates...",
+	"workflows.templatesDataQuality.seeMoreTemplates": "See more templates",
 	"workflows.search.placeholder": "Search",
 	"workflows.filters": "Filters",
 	"workflows.filters.tags": "Tags",
