--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2392,10 +2392,8 @@
 	"settings.provisioning.scopesProjectsRolesClaimName": "Projects Roles Claim Name",
 	"settings.provisioning.scopesProjectsRolesClaimName.placeholder": "Enter projects roles claim name",
 	"settings.provisioning.scopesProjectsRolesClaimName.help": "The claim name used to provision projects and their roles from Oauth. For SAML / LDAP, this will be the attribute name checked.",
-	"settings.provisioning.scopesProvisionInstanceRole": "Provision Instance Role",
-	"settings.provisioning.scopesProvisionInstanceRole.help": "Enable automatic provisioning of instance roles",
-	"settings.provisioning.scopesProvisionProjectRoles": "Provision Project Roles",
-	"settings.provisioning.scopesProvisionProjectRoles.help": "Enable automatic provisioning of projects and project roles",
+	"settings.provisioning.toggle": "Provision instance and project roles",
+	"settings.provisioning.toggle.help": "Project access can only be defined on external provider. Any existing project access configured in n8n, but not on the provider, will be removed once a user logs in.",
 	"settings.provisioning.scopesProvisioningFrequency": "Provisioning Frequency",
 	"settings.provisioning.scopesProvisioningFrequency.placeholder": "Select provisioning frequency",
 	"settings.provisioning.scopesProvisioningFrequency.help": "How often to provision projects and roles",
