✨ Implemented oAuth clients table

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -2072,6 +2072,14 @@
 	"settings.mcp.error.fetching.apiKey": "Error fetching access token",
 	"settings.mcp.error.rotating.apiKey": "Error generating new access token",
 	"settings.mcp.error.fetching.oAuthClients": "Error fetching list of OAuth clients",
+	"settings.mcp.oAuthClients.heading": "Connected oAuth clients",
+	"settings.mcp.oAuthClients.table.clientName": "Client Name",
+	"settings.mcp.oAuthClients.table.connectedAt": "Connected At",
+	"settings.mcp.oAuthClients.table.lastUsedAt": "Last Used At",
+	"settings.mcp.oAuthClients.table.action.revokeAccess": "Revoke Access",
+	"settings.mcp.oAuthClients.revoke.success.title": "Access revoked",
+	"settings.mcp.oAuthClients.revoke.success.message": "Client {name} access has been revoked",
+	"settings.mcp.oAuthClients.revoke.error": "Error revoking client access",
 	"settings.goBack": "Go back",
 	"settings.personal": "Personal",
 	"settings.personal.basicInformation": "Basic Information",
