feat(editor): Add global rows search on data table details view

--- a/packages/frontend/@n8n/i18n/src/locales/en.json
+++ b/packages/frontend/@n8n/i18n/src/locales/en.json
@@ -129,6 +129,7 @@
 	"generic.projects": "Projects",
 	"generic.your": "Your",
 	"generic.apiKey": "API Key",
+	"generic.search": "Search",
 	"about.aboutN8n": "About n8n",
 	"about.close": "Close",
 	"about.license": "License",
